--- a/html/index.html
+++ b/html/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Formation Kubernetes</title>
+    <title>Formation Docker/Kubernetes</title>
     <meta charset="utf-8">
   </head>
   <body>
-    <h4>Formation Kubernetes</h4>
+    <h4>Formation Docker/Kubernetes</h4>
   </body>
 </html>
